--- a/css/main-page.css
+++ b/css/main-page.css
@@ -1,44 +1,50 @@
 /*Основной контент страницы*/
 
 .divider {
-    margin-top: 10px;
-    width: 1860px;
-    margin-left: 30px;
+  margin-top: 10px;
+  width: 1860px;
+  margin-left: 30px;
 }
 
 .text-div {
-    padding: 5px;
+  padding: 5px;
 }
 
 .text-col {
-    padding: 20px;
-    text-align: justify;
+  padding: 20px;
+  text-align: justify;
 }
 
 .text-img {
-    width: 90%;
-    margin-left: 5%;
+  width: 90%;
+  margin-left: 5%;
 }
 
-.employee-img-container, .partner {
-    display: block;
-    text-align: center;
+.employee-img-container,
+.partner {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+
+.employee-img {
+  width: 100%;
 }
 
 .left-content-block {
-    padding-left: 30px;
+  padding-left: 30px;
 }
 
 .right-content-block {
-    padding-right: 30px;
+  padding-right: 30px;
 }
 
 .main-text {
-    font-size: 24px;
-    line-height: 28px;
-    text-align: justify;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: justify;
 }
 
 .partner-img {
-    margin: 0 auto;
+  margin: 0 auto;
 }
